--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -1,13 +1,14 @@
-NAME = philo
+NAME = philo_bonus
 
 CC = cc
 CFLAGS = -Wall -Wextra -Werror -g3
 
 OBJDIR = ../objects
 
-SRCS	=	philo.c \
-			utils.c \
-			verif.c
+SRCS	=	philo_bonus.c \
+			utils_bonus.c \
+			utils_bonus2.c \
+			main_bonus.c \
 
 OBJS = $(patsubst %.c, $(OBJDIR)/%.o, $(SRCS))
 
@@ -24,22 +25,13 @@ $(OBJDIR)/%.o: %.c
 	@$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	@if [ -d "$(OBJDIR)" ]; then \
-		echo "\033[33mCleaning object files...\033[0m"; \
-		$(RM) -r $(OBJDIR); \
-		echo "\033[32mClean completed successfully!\033[0m"; \
-	else \
-		echo "\033[33mNo objects to clean.\033[0m"; \
-	fi
+	@$(RM) $(OBJS)
+	@rmdir $(OBJDIR) 2>/dev/null || true
+	@echo "Cleaned all object files."
 
 fclean: clean
-	@if [ -f "$(NAME)" ]; then \
-		echo "\033[33mRemoving $(NAME)...\033[0m"; \
-		$(RM) $(NAME); \
-		echo "\033[32mFull clean completed successfully!\033[0m"; \
-	else \
-		echo "\033[33mNo executable to clean.\033[0m"; \
-	fi
+	@$(RM) $(NAME)
+	@echo "Cleaned $(NAME) and all objects."
 
 re: fclean all
 
