--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,7 +1,7 @@
 NAME = philo
 
 CC = cc
-CFLAGS = -Wall -Wextra -Werror -g3 
+CFLAGS = -Wall -Wextra -Werror -fsanitize=thread -g3
 
 OBJDIR = ../objects
 
